k8s/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hayoung
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hayoung
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hayoung
    spec:
      containers:
        - name: backend
          # Replace with your docker registry info
          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_63363ec56535
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 300m
              memory: 200Mi
