k8s/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hayoung
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: hayoung
